--- a/styles.css
+++ b/styles.css
@@ -64,16 +64,16 @@ h1 {
 }
 
 .search-box input[type="text"]:focus {
-    border-color: #00ff7f; /* Verde claro */
-    box-shadow: 0 0 10px #00ff7f; /* Sombra animada al hacer focus */
+    border-color: #004080; /* Azul de la tabla */
+    box-shadow: 0 0 10px #004080; /* Sombra azul animada */
 }
 
 /* Botones */
 .search-box button {
     width: 100%;
     padding: 12px 20px;
-    background-color: #00ff7f; /* Verde claro */
-    color: black;
+    background-color: #004080; /* Azul de la tabla */
+    color: white;
     border: none;
     margin-top: 10px;
     border-radius: 8px;
@@ -84,9 +84,9 @@ h1 {
 }
 
 .search-box button:hover {
-    background-color: #00cc66; /* Verde más oscuro en hover */
+    background-color: #003366; /* Azul más oscuro en hover */
     transform: translateY(-3px); /* Efecto de "flotar" */
-    box-shadow: 0px 8px 15px rgba(0, 255, 127, 0.3); /* Sombra animada */
+    box-shadow: 0px 8px 15px rgba(0, 64, 128, 0.3); /* Sombra azul animada */
 }
 
 /* Botón de regresar */
@@ -114,7 +114,7 @@ button.regresar:hover {
 .loader {
     border: 6px solid #333333;
     border-radius: 50%;
-    border-top: 6px solid #00ff7f; /* Verde claro */
+    border-top: 6px solid #004080; /* Azul de la tabla */
     width: 40px;
     height: 40px;
     animation: spin 1s linear infinite, fadeInUp 1s ease-in-out; /* Animación de entrada y rotación */
@@ -221,13 +221,13 @@ table tbody tr:hover {
 }
 
 .calculator-box input:focus {
-    border-color: #00ff7f;
+    border-color: #004080; /* Azul de la tabla */
 }
 
 .calculator-box button {
     padding: 12px 25px;
-    background-color: #00ff7f;
-    color: black;
+    background-color: #004080; /* Azul de la tabla */
+    color: white;
     border: none;
     border-radius: 25px;
     font-size: 16px;
@@ -236,8 +236,8 @@ table tbody tr:hover {
 }
 
 .calculator-box button:hover {
-    background-color: #00cc66;
-    box-shadow: 0px 4px 10px rgba(0, 255, 127, 0.3);
+    background-color: #003366;
+    box-shadow: 0px 4px 10px rgba(0, 64, 128, 0.3);
 }
 
 .calculator-box p {
